--- a/assignment 4_happinessIndex.ipynb
+++ b/assignment 4_happinessIndex.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "0bf39b08",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "fc63fb76",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "11124032",
    "metadata": {},
    "outputs": [
@@ -259,7 +259,7 @@
        "[156 rows x 9 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "6a0c15df",
    "metadata": {},
    "outputs": [
@@ -487,7 +487,7 @@
        "[156 rows x 9 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "999ef94e",
    "metadata": {},
    "outputs": [
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "b22c5f15",
    "metadata": {},
    "outputs": [
@@ -602,7 +602,7 @@
        "19                        NaN  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "4fdfddad",
    "metadata": {},
    "outputs": [],
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "a506b393",
    "metadata": {},
    "outputs": [
@@ -1006,7 +1006,7 @@
        "[151 rows x 17 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1026,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "0111b25b",
    "metadata": {
     "scrolled": true
@@ -1055,7 +1055,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1082,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "a27a6837",
    "metadata": {},
    "outputs": [
@@ -1287,7 +1287,7 @@
        "[151 rows x 8 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1319,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "4fdb1f8b",
    "metadata": {},
    "outputs": [
@@ -1524,7 +1524,7 @@
        "[87 rows x 8 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1554,7 +1554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "a8b19aca-77a0-4a05-b825-e7dcf7123bd6",
    "metadata": {},
    "outputs": [
@@ -1562,7 +1562,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\David\\AppData\\Local\\Temp\\ipykernel_20920\\735252538.py:1: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
+      "C:\\Users\\David\\AppData\\Local\\Temp\\ipykernel_7964\\735252538.py:1: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
       "  corrMatrix = change_incr_df.corr()\n"
      ]
     },
@@ -1604,7 +1604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "b58cfe01",
    "metadata": {},
    "outputs": [
@@ -1932,7 +1932,7 @@
        "75               0.003                        -0.004  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1944,7 +1944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "ce508558",
    "metadata": {},
    "outputs": [
@@ -1994,12 +1994,12 @@
    "source": [
     "## Appendix\n",
     "\n",
-    "In this section, we will implement multiple machine learning algorithms to predict happiness score. Im going to use the data from 2018 as my train, validation and test data, and the data from 2019 as a simulation of the model in production.\n"
+    "In this section, we will implement multiple machine learning algorithms to predict happiness score. Im going to use the data from 2018 as my train, validation and test data, and the data from 2019 as a simulation of the data in production.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "a90b383c-85d3-43c9-9738-1373f26c0588",
    "metadata": {},
    "outputs": [],
@@ -2025,7 +2025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "77a27d14-af5f-4296-9677-0a7294df0182",
    "metadata": {},
    "outputs": [],
@@ -2039,7 +2039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "d48b8c75-1b2a-4508-a133-192648038518",
    "metadata": {},
    "outputs": [],
@@ -2459,7 +2459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "id": "58bd3a9a-dc38-4013-acc3-4f50cb93d96c",
    "metadata": {},
    "outputs": [
@@ -2679,9 +2679,9 @@
     "model = MLPRegressor(random_state=0)\n",
     "grid_values = {\n",
     "    'hidden_layer_sizes': [(50,), (100,), (50, 50), (100, 50)], # Different hidden layer architectures\n",
-    "    'activation': ['relu', 'tanh'],          # Activation functions to use\n",
-    "    'learning_rate': ['constant', 'adaptive'], # Learning rate schedule\n",
-    "    'max_iter': [100, 200, 300]              # Number of iterations\n",
+    "    'activation': ['relu', 'tanh'],                             # Activation functions to use\n",
+    "    'learning_rate': ['constant', 'adaptive'],                  # Learning rate schedule\n",
+    "    'max_iter': [100, 200, 300]                                 # Number of iterations\n",
     "}\n",
     "score='r2'\n",
     "nested_cv(X, y, model, grid_values, score)\n",
@@ -2695,12 +2695,12 @@
    "id": "7d1ea859-a32f-4cbc-8d9f-ca614a097a31",
    "metadata": {},
    "source": [
-    "As we can observe the higher value in R2 it is 0.756 and it is on the Random Forest Regression model, So we are going to re-train this model on the entire train set and then tested in the production set."
+    "As we can observe the higher value in R2 it is 0.756 and it is on the Random Forest Regression model, So we are going to re-train this model on the entire train set and then tested in the simulated production set."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 20,
    "id": "75a042c4-e0d6-49dc-8cf1-60fd36ba0131",
    "metadata": {},
    "outputs": [
@@ -2708,7 +2708,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R-squared gradient boosting test set: 0.7885810566595451\n"
+      "R-squared RandomForest production set: 0.7885810566595451\n"
      ]
     }
    ],
@@ -2723,12 +2723,12 @@
     "    }\n",
     "rf = GridSearchCV(model, param_grid = grid_values, cv = kfold, scoring='r2', refit = True)\n",
     "rf.fit(X, y)\n",
-    "print('R-squared gradient boosting test set:', rf.score(X_2019, y_2019))"
+    "print('R-squared RandomForest production set:', rf.score(X_2019, y_2019))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 22,
    "id": "0890729f-4ff2-435d-817e-9f60d5fe5f3a",
    "metadata": {},
    "outputs": [
@@ -2744,7 +2744,7 @@
     }
    ],
    "source": [
-    "plt.scatter(best_parameters_model.predict(X_2019), y_2019, color='#1f77b4')\n",
+    "plt.scatter(rf.predict(X_2019), y_2019, color='#1f77b4')\n",
     "y_lim = plt.ylim()\n",
     "x_lim = plt.xlim()\n",
     "plt.plot(x_lim, y_lim, color =\"#d62728\")\n",
